--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//WebContent/WEB-INF/views/index.jsp=UTF-8
 encoding//WebContent/WEB-INF/views/register.jsp=UTF-8
 encoding//WebContent/WEB-INF/views/testform.jsp=UTF-8
